--- a/spec/vcr/requests/incivent_activities/event_editing_success.yml
+++ b/spec/vcr/requests/incivent_activities/event_editing_success.yml
@@ -2,219 +2,89 @@
 http_interactions:
 - request:
     method: get
-    uri: http://maps.googleapis.com/maps/api/geocode/json?language=en&latlng=60.555%2C70.333&sensor=false
+    uri: http://maps.googleapis.com/maps/api/geocode/json?language=en&latlng=60.555,70.333&sensor=false
     body:
       encoding: US-ASCII
       string: ''
     headers:
-      accept-encoding:
+      Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-      accept:
+      Accept:
       - '*/*'
-      user-agent:
+      User-Agent:
       - Ruby
   response:
     status:
       code: 200
       message: OK
     headers:
-      content-type:
+      Content-Type:
       - application/json; charset=UTF-8
-      date:
-      - Mon, 27 Jan 2014 09:14:52 GMT
-      expires:
-      - Tue, 28 Jan 2014 09:14:52 GMT
-      cache-control:
+      Date:
+      - Mon, 14 Jul 2014 17:48:31 GMT
+      Expires:
+      - Tue, 15 Jul 2014 17:48:31 GMT
+      Cache-Control:
       - public, max-age=86400
-      access-control-allow-origin:
+      Access-Control-Allow-Origin:
       - '*'
-      server:
+      Server:
       - mafe
-      x-xss-protection:
+      X-Xss-Protection:
       - 1; mode=block
-      x-frame-options:
+      X-Frame-Options:
       - SAMEORIGIN
-      alternate-protocol:
+      Alternate-Protocol:
       - 80:quic
-      connection:
-      - close
+      Transfer-Encoding:
+      - chunked
     body:
       encoding: UTF-8
       string: |
         {
-           "results" : [
-              {
-                 "address_components" : [
-                    {
-                       "long_name" : "Nefteyugansky District",
-                       "short_name" : "Nefteyugansky District",
-                       "types" : [ "administrative_area_level_2", "political" ]
-                    },
-                    {
-                       "long_name" : "Khanty-Mansi Autonomous Okrug",
-                       "short_name" : "KhMAO",
-                       "types" : [ "administrative_area_level_1", "political" ]
-                    },
-                    {
-                       "long_name" : "Russia",
-                       "short_name" : "RU",
-                       "types" : [ "country", "political" ]
-                    }
-                 ],
-                 "formatted_address" : "Nefteyugansky District, Khanty-Mansi Autonomous Okrug, Russia",
-                 "geometry" : {
-                    "bounds" : {
-                       "northeast" : {
-                          "lat" : 61.25127999999999,
-                          "lng" : 73.37567989999999
-                       },
-                       "southwest" : {
-                          "lat" : 59.33415199999999,
-                          "lng" : 70.1051531
-                       }
-                    },
-                    "location" : {
-                       "lat" : 60.4015412,
-                       "lng" : 71.4183922
-                    },
-                    "location_type" : "APPROXIMATE",
-                    "viewport" : {
-                       "northeast" : {
-                          "lat" : 61.25127999999999,
-                          "lng" : 73.37567989999999
-                       },
-                       "southwest" : {
-                          "lat" : 59.33415199999999,
-                          "lng" : 70.1051531
-                       }
-                    }
-                 },
-                 "types" : [ "administrative_area_level_2", "political" ]
-              },
-              {
-                 "address_components" : [
-                    {
-                       "long_name" : "Khanty-Mansi Autonomous Okrug",
-                       "short_name" : "KhMAO",
-                       "types" : [ "administrative_area_level_1", "political" ]
-                    },
-                    {
-                       "long_name" : "Russia",
-                       "short_name" : "RU",
-                       "types" : [ "country", "political" ]
-                    }
-                 ],
-                 "formatted_address" : "Khanty-Mansi Autonomous Okrug, Russia",
-                 "geometry" : {
-                    "bounds" : {
-                       "northeast" : {
-                          "lat" : 65.71070100000001,
-                          "lng" : 85.9711176
-                       },
-                       "southwest" : {
-                          "lat" : 58.57641899999999,
-                          "lng" : 59.197479
-                       }
-                    },
-                    "location" : {
-                       "lat" : 62.2287062,
-                       "lng" : 70.6410058
-                    },
-                    "location_type" : "APPROXIMATE",
-                    "viewport" : {
-                       "northeast" : {
-                          "lat" : 65.71070100000001,
-                          "lng" : 85.9711176
-                       },
-                       "southwest" : {
-                          "lat" : 58.57641899999999,
-                          "lng" : 59.197479
-                       }
-                    }
-                 },
-                 "types" : [ "administrative_area_level_1", "political" ]
-              },
-              {
-                 "address_components" : [
-                    {
-                       "long_name" : "Russia",
-                       "short_name" : "RU",
-                       "types" : [ "country", "political" ]
-                    }
-                 ],
-                 "formatted_address" : "Russia",
-                 "geometry" : {
-                    "bounds" : {
-                       "northeast" : {
-                          "lat" : 81.85812199999999,
-                          "lng" : -169.0467267
-                       },
-                       "southwest" : {
-                          "lat" : 41.185353,
-                          "lng" : 19.6405339
-                       }
-                    },
-                    "location" : {
-                       "lat" : 61.52401,
-                       "lng" : 105.318756
-                    },
-                    "location_type" : "APPROXIMATE",
-                    "viewport" : {
-                       "northeast" : {
-                          "lat" : 70,
-                          "lng" : 179
-                       },
-                       "southwest" : {
-                          "lat" : 40,
-                          "lng" : 27
-                       }
-                    }
-                 },
-                 "types" : [ "country", "political" ]
-              }
-           ],
-           "status" : "OK"
+           "results" : [],
+           "status" : "ZERO_RESULTS"
         }
-    http_version: '1.1'
-  recorded_at: Mon, 27 Jan 2014 09:14:53 GMT
+    http_version: 
+  recorded_at: Mon, 14 Jul 2014 17:48:31 GMT
 - request:
     method: get
-    uri: http://maps.googleapis.com/maps/api/geocode/json?language=en&latlng=60.555%2C70.333&sensor=false
+    uri: http://maps.googleapis.com/maps/api/geocode/json?language=en&latlng=60.555,70.333&sensor=false
     body:
       encoding: US-ASCII
       string: ''
     headers:
-      accept-encoding:
+      Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-      accept:
+      Accept:
       - '*/*'
-      user-agent:
+      User-Agent:
       - Ruby
   response:
     status:
       code: 200
       message: OK
     headers:
-      content-type:
+      Content-Type:
       - application/json; charset=UTF-8
-      date:
-      - Mon, 27 Jan 2014 09:14:53 GMT
-      expires:
-      - Tue, 28 Jan 2014 09:14:53 GMT
-      cache-control:
+      Date:
+      - Mon, 14 Jul 2014 17:48:32 GMT
+      Expires:
+      - Tue, 15 Jul 2014 17:48:32 GMT
+      Cache-Control:
       - public, max-age=86400
-      access-control-allow-origin:
+      Access-Control-Allow-Origin:
       - '*'
-      server:
+      Server:
       - mafe
-      x-xss-protection:
+      X-Xss-Protection:
       - 1; mode=block
-      x-frame-options:
+      X-Frame-Options:
       - SAMEORIGIN
-      alternate-protocol:
+      Alternate-Protocol:
       - 80:quic
-      connection:
-      - close
+      Transfer-Encoding:
+      - chunked
     body:
       encoding: UTF-8
       string: |
@@ -328,7 +198,7 @@ http_interactions:
                        },
                        "southwest" : {
                           "lat" : 41.185353,
-                          "lng" : 19.6405339
+                          "lng" : 19.6403534
                        }
                     },
                     "location" : {
@@ -352,6 +222,6 @@ http_interactions:
            ],
            "status" : "OK"
         }
-    http_version: '1.1'
-  recorded_at: Mon, 27 Jan 2014 09:14:54 GMT
-recorded_with: VCR 2.4.0
+    http_version: 
+  recorded_at: Mon, 14 Jul 2014 17:48:32 GMT
+recorded_with: VCR 2.9.2
