--- a/spec/vcr/requests/incivent_activities/event_listing.yml
+++ b/spec/vcr/requests/incivent_activities/event_listing.yml
@@ -2,42 +2,42 @@
 http_interactions:
 - request:
     method: get
-    uri: http://maps.googleapis.com/maps/api/geocode/json?language=en&latlng=60.555%2C70.333&sensor=false
+    uri: http://maps.googleapis.com/maps/api/geocode/json?language=en&latlng=60.555,70.333&sensor=false
     body:
       encoding: US-ASCII
       string: ''
     headers:
-      accept-encoding:
+      Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-      accept:
+      Accept:
       - '*/*'
-      user-agent:
+      User-Agent:
       - Ruby
   response:
     status:
       code: 200
       message: OK
     headers:
-      content-type:
+      Content-Type:
       - application/json; charset=UTF-8
-      date:
-      - Mon, 27 Jan 2014 09:14:47 GMT
-      expires:
-      - Tue, 28 Jan 2014 09:14:47 GMT
-      cache-control:
+      Date:
+      - Mon, 14 Jul 2014 17:48:25 GMT
+      Expires:
+      - Tue, 15 Jul 2014 17:48:25 GMT
+      Cache-Control:
       - public, max-age=86400
-      access-control-allow-origin:
+      Access-Control-Allow-Origin:
       - '*'
-      server:
+      Server:
       - mafe
-      x-xss-protection:
+      X-Xss-Protection:
       - 1; mode=block
-      x-frame-options:
+      X-Frame-Options:
       - SAMEORIGIN
-      alternate-protocol:
+      Alternate-Protocol:
       - 80:quic
-      connection:
-      - close
+      Transfer-Encoding:
+      - chunked
     body:
       encoding: UTF-8
       string: |
@@ -151,7 +151,7 @@ http_interactions:
                        },
                        "southwest" : {
                           "lat" : 41.185353,
-                          "lng" : 19.6405339
+                          "lng" : 19.6403534
                        }
                     },
                     "location" : {
@@ -175,6 +175,6 @@ http_interactions:
            ],
            "status" : "OK"
         }
-    http_version: '1.1'
-  recorded_at: Mon, 27 Jan 2014 09:14:47 GMT
-recorded_with: VCR 2.4.0
+    http_version: 
+  recorded_at: Mon, 14 Jul 2014 17:48:25 GMT
+recorded_with: VCR 2.9.2
