--- a/spec/vcr/requests/sms_activities/event_creation_failure_2.yml
+++ b/spec/vcr/requests/sms_activities/event_creation_failure_2.yml
@@ -5,46 +5,42 @@ http_interactions:
     uri: http://client.connet-systems.com/submit/
     body:
       encoding: US-ASCII
-      string: username=worldwize&password=vae0aih5Bayerau&account=worldwize&da=%5BIncivent%5D+-+Number+not+recognized+for+submission.&ud&id=r0ttwwhqrb
+      string: username=worldwize&password=vae0aih5Bayerau&account=worldwize&da=%5BIncivent%5D+-+Number+not+recognized+for+submission.&ud&id=9n32my28pi
     headers:
-      accept-encoding:
+      Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-      accept:
+      Accept:
       - '*/*'
-      user-agent:
+      User-Agent:
       - Ruby
-      host:
+      Host:
       - client.connet-systems.com
-      content-type:
+      Content-Type:
       - application/x-www-form-urlencoded
   response:
     status:
       code: 200
       message: OK
     headers:
-      date:
-      - Mon, 27 Jan 2014 09:15:08 GMT
-      server:
+      Date:
+      - Mon, 14 Jul 2014 18:39:54 GMT
+      Server:
       - Apache/2.2.17 (Ubuntu)
-      x-powered-by:
+      X-Powered-By:
       - PHP/5.3.5-1ubuntu7.11
-      vary:
+      Vary:
       - Accept-Encoding
-      content-encoding:
-      - gzip
-      content-type:
+      Content-Length:
+      - '131'
+      Content-Type:
       - text/plain
-      expires:
-      - Mon, 27 Jan 2014 11:15:08 GMT
-      transfer-encoding:
-      - chunked
     body:
       encoding: UTF-8
       string: |
-        BatchIdentifier: worldwize_worldwize_20140127111508_1390814108.4558
+        BatchIdentifier: worldwize_worldwize_20140714203955_1405363195.0488
         Code: 811
         Description: Missing User Data
-        Info: r0ttwwhqrb
-    http_version: '1.1'
-  recorded_at: Mon, 27 Jan 2014 09:15:08 GMT
-recorded_with: VCR 2.4.0
+        Info: 9n32my28pi
+    http_version: 
+  recorded_at: Mon, 14 Jul 2014 18:39:55 GMT
+recorded_with: VCR 2.9.2
