--- a/spec/vcr/requests/sms_activities/event_creation_success.yml
+++ b/spec/vcr/requests/sms_activities/event_creation_success.yml
@@ -2,42 +2,42 @@
 http_interactions:
 - request:
     method: get
-    uri: http://maps.googleapis.com/maps/api/geocode/json?address=12+Kloof+Street+Cape+Town&language=en&sensor=false
+    uri: http://maps.googleapis.com/maps/api/geocode/json?address=12%20Kloof%20Street%20Cape%20Town&language=en&sensor=false
     body:
       encoding: US-ASCII
       string: ''
     headers:
-      accept-encoding:
+      Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-      accept:
+      Accept:
       - '*/*'
-      user-agent:
+      User-Agent:
       - Ruby
   response:
     status:
       code: 200
       message: OK
     headers:
-      content-type:
+      Content-Type:
       - application/json; charset=UTF-8
-      date:
-      - Mon, 27 Jan 2014 09:15:09 GMT
-      expires:
-      - Tue, 28 Jan 2014 09:15:09 GMT
-      cache-control:
+      Date:
+      - Mon, 14 Jul 2014 18:39:56 GMT
+      Expires:
+      - Tue, 15 Jul 2014 18:39:56 GMT
+      Cache-Control:
       - public, max-age=86400
-      access-control-allow-origin:
+      Access-Control-Allow-Origin:
       - '*'
-      server:
+      Server:
       - mafe
-      x-xss-protection:
+      X-Xss-Protection:
       - 1; mode=block
-      x-frame-options:
+      X-Frame-Options:
       - SAMEORIGIN
-      alternate-protocol:
+      Alternate-Protocol:
       - 80:quic
-      connection:
-      - close
+      Transfer-Encoding:
+      - chunked
     body:
       encoding: UTF-8
       string: |
@@ -58,12 +58,12 @@ http_interactions:
                     {
                        "long_name" : "Gardens",
                        "short_name" : "Gardens",
-                       "types" : [ "sublocality", "political" ]
+                       "types" : [ "sublocality_level_2", "sublocality", "political" ]
                     },
                     {
                        "long_name" : "Cape Town",
                        "short_name" : "Cape Town",
-                       "types" : [ "sublocality", "political" ]
+                       "types" : [ "sublocality_level_1", "sublocality", "political" ]
                     },
                     {
                        "long_name" : "Cape Town",
@@ -119,53 +119,49 @@ http_interactions:
            ],
            "status" : "OK"
         }
-    http_version: '1.1'
-  recorded_at: Mon, 27 Jan 2014 09:15:09 GMT
+    http_version: 
+  recorded_at: Mon, 14 Jul 2014 18:39:57 GMT
 - request:
     method: post
     uri: http://client.connet-systems.com/submit/
     body:
       encoding: US-ASCII
-      string: username=worldwize&password=vae0aih5Bayerau&account=worldwize&da=%5BIncivent%5D+-+Your+message%2Fevent+has+been+logged.&ud&id=u8uyfvt3kf
+      string: username=worldwize&password=vae0aih5Bayerau&account=worldwize&da=%5BIncivent%5D+-+Your+message%2Fevent+has+been+logged.&ud&id=3mocf4k6tv
     headers:
-      accept-encoding:
+      Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-      accept:
+      Accept:
       - '*/*'
-      user-agent:
+      User-Agent:
       - Ruby
-      host:
+      Host:
       - client.connet-systems.com
-      content-type:
+      Content-Type:
       - application/x-www-form-urlencoded
   response:
     status:
       code: 200
       message: OK
     headers:
-      date:
-      - Mon, 27 Jan 2014 09:15:09 GMT
-      server:
+      Date:
+      - Mon, 14 Jul 2014 18:39:57 GMT
+      Server:
       - Apache/2.2.17 (Ubuntu)
-      x-powered-by:
+      X-Powered-By:
       - PHP/5.3.5-1ubuntu7.11
-      vary:
+      Vary:
       - Accept-Encoding
-      content-encoding:
-      - gzip
-      content-type:
-      - text/plain
-      expires:
-      - Mon, 27 Jan 2014 11:15:09 GMT
-      transfer-encoding:
+      Transfer-Encoding:
       - chunked
+      Content-Type:
+      - text/plain
     body:
       encoding: UTF-8
       string: |
-        BatchIdentifier: worldwize_worldwize_20140127111509_1390814109.7677
+        BatchIdentifier: worldwize_worldwize_20140714203957_1405363197.5793
         Code: 811
         Description: Missing User Data
-        Info: u8uyfvt3kf
-    http_version: '1.1'
-  recorded_at: Mon, 27 Jan 2014 09:15:09 GMT
-recorded_with: VCR 2.4.0
+        Info: 3mocf4k6tv
+    http_version: 
+  recorded_at: Mon, 14 Jul 2014 18:39:57 GMT
+recorded_with: VCR 2.9.2
