--- a/spec/vcr/requests/sms_activities/message_creation_success.yml
+++ b/spec/vcr/requests/sms_activities/message_creation_success.yml
@@ -21,9 +21,9 @@ http_interactions:
       Content-Type:
       - application/json; charset=UTF-8
       Date:
-      - Mon, 14 Jul 2014 18:39:58 GMT
+      - Thu, 05 Mar 2015 12:54:27 GMT
       Expires:
-      - Tue, 15 Jul 2014 18:39:58 GMT
+      - Fri, 06 Mar 2015 12:54:27 GMT
       Cache-Control:
       - public, max-age=86400
       Access-Control-Allow-Origin:
@@ -35,7 +35,11 @@ http_interactions:
       X-Frame-Options:
       - SAMEORIGIN
       Alternate-Protocol:
-      - 80:quic
+      - 80:quic,p=0.08
+      Accept-Ranges:
+      - none
+      Vary:
+      - Accept-Encoding
       Transfer-Encoding:
       - chunked
     body:
@@ -73,11 +77,6 @@ http_interactions:
                     {
                        "long_name" : "Cape Town",
                        "short_name" : "Cape Town",
-                       "types" : [ "administrative_area_level_3", "political" ]
-                    },
-                    {
-                       "long_name" : "Cape Town",
-                       "short_name" : "Cape Town",
                        "types" : [ "administrative_area_level_2", "political" ]
                     },
                     {
@@ -96,7 +95,7 @@ http_interactions:
                        "types" : [ "postal_code" ]
                     }
                  ],
-                 "formatted_address" : "30 Kloof Street, Cape Town 8001, South Africa",
+                 "formatted_address" : "30 Kloof Street, Gardens, Cape Town, 8001, South Africa",
                  "geometry" : {
                     "location" : {
                        "lat" : -33.9281999,
@@ -114,19 +113,20 @@ http_interactions:
                        }
                     }
                  },
+                 "place_id" : "ChIJxUJu13FnzB0R4Zt5ypT6Fpc",
                  "types" : [ "street_address" ]
               }
            ],
            "status" : "OK"
         }
     http_version: 
-  recorded_at: Mon, 14 Jul 2014 18:39:58 GMT
+  recorded_at: Thu, 05 Mar 2015 12:54:28 GMT
 - request:
     method: post
     uri: http://client.connet-systems.com/submit/
     body:
       encoding: US-ASCII
-      string: username=worldwize&password=vae0aih5Bayerau&account=worldwize&da=%5BIncivent%5D+-+Your+message%2Fevent+has+been+logged.&ud&id=8br3evp2pg
+      string: username=worldwize&password=vae0aih5Bayerau&account=worldwize&da=%5BIncivent%5D+-+Your+message%2Fevent+has+been+logged.&ud&id=toqtgsb0fr
     headers:
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
@@ -144,7 +144,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Mon, 14 Jul 2014 18:39:58 GMT
+      - Thu, 05 Mar 2015 12:54:28 GMT
       Server:
       - Apache/2.2.17 (Ubuntu)
       X-Powered-By:
@@ -152,16 +152,16 @@ http_interactions:
       Vary:
       - Accept-Encoding
       Content-Length:
-      - '133'
+      - '130'
       Content-Type:
       - text/plain
     body:
       encoding: UTF-8
       string: |
-        BatchIdentifier: worldwize_worldwize_20140714203958_1405363198.878
+        BatchIdentifier: worldwize_worldwize_20150305145428_1425560068.2208
         Code: 811
         Description: Missing User Data
-        Info: 8br3evp2pg
+        Info: toqtgsb0fr
     http_version: 
-  recorded_at: Mon, 14 Jul 2014 18:39:59 GMT
+  recorded_at: Thu, 05 Mar 2015 12:54:28 GMT
 recorded_with: VCR 2.9.2
