--- a/spec/vcr/requests/task_activities/task_creation_success.yml
+++ b/spec/vcr/requests/task_activities/task_creation_success.yml
@@ -10,7 +10,7 @@ http_interactions:
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
-      - '*/*'
+      - "*/*"
       User-Agent:
       - Ruby
   response:
@@ -21,29 +21,23 @@ http_interactions:
       Content-Type:
       - application/json; charset=UTF-8
       Date:
-      - Thu, 05 Mar 2015 12:54:35 GMT
+      - Fri, 11 Mar 2016 15:21:49 GMT
       Expires:
-      - Fri, 06 Mar 2015 12:54:35 GMT
+      - Sat, 12 Mar 2016 15:21:49 GMT
       Cache-Control:
       - public, max-age=86400
       Access-Control-Allow-Origin:
-      - '*'
+      - "*"
       Server:
       - mafe
+      Content-Length:
+      - '551'
       X-Xss-Protection:
       - 1; mode=block
       X-Frame-Options:
       - SAMEORIGIN
-      Alternate-Protocol:
-      - 80:quic,p=0.08
-      Accept-Ranges:
-      - none
-      Vary:
-      - Accept-Encoding
-      Transfer-Encoding:
-      - chunked
     body:
-      encoding: UTF-8
+      encoding: ASCII-8BIT
       string: |
         {
            "results" : [
@@ -90,7 +84,7 @@ http_interactions:
                        "types" : [ "postal_code" ]
                     }
                  ],
-                 "formatted_address" : "20 Corlett Drive, Johannesburg, 2018, South Africa",
+                 "formatted_address" : "20 Corlett Dr, Johannesburg, 2018, South Africa",
                  "geometry" : {
                     "location" : {
                        "lat" : -26.1249014,
@@ -115,5 +109,5 @@ http_interactions:
            "status" : "OK"
         }
     http_version: 
-  recorded_at: Thu, 05 Mar 2015 12:54:35 GMT
+  recorded_at: Fri, 11 Mar 2016 15:21:50 GMT
 recorded_with: VCR 2.9.2
